Tidy up repo